www-src/app/styles/overviewscreen.less
.label-purple {
	background-color: #CAA8D9;
}

.overviewscreen {
	padding: 30px 0 0 0;

	.section {
		padding: 0 5px;
		vertical-align: middle;

		.loading {
			margin: 0 auto;
		}

		.list {
			margin: 0;

			svg {
				width: 100%;
			}
		}

		.li {
			margin: 0;
			vertical-align: middle;
			border-top: 1px solid rgba(0, 0, 0, 0.15);

			.label-container {
				padding-left: 0;

				.label {
					margin-right: 5px;
				}
			}
		}

		.sect-header {
			font-weight: bold;
		}

		.sect-graph {
			height: 200px;
			padding: 25px 0 0 0;
		}

		.dc-chart.pie {
			float: none;
			text-align: center;
		}

		.dc-chart.line {
			g.axis.x, g.axis.y {
				display: none;
			}
		}
	}
}

.sidebar {
	.item {
		margin: 0;
	}
}

#pie-tooltip {
	position: fixed;
	width: 150px;
	max-width: 150px;
	margin-left: -75px;
	margin-top: -100px;
}

@media all and (max-width: 992px) {
	.overviewscreen {
		padding: 0;

		.section {
			.sect-graph {
				height: initial;
				padding: 0;
			}
		}
	}
}

